# dazzle-js

./: .gitignore  ARENA_MIGRATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DSSSL_IMPLEMENTATION.md  FIXES_IMPLEMENTED.md  FLOWOBJ_PORT_PLAN.md  PERFORMANCE_ANALYSIS.md  PUBLISHING.md  README.md  output.txt  package.json  tsconfig.json
crates/dazzle/: Cargo.toml
crates/dazzle-backend-rtf/: Cargo.toml
crates/dazzle-backend-rtf/src/: lib.rs
crates/dazzle-backend-sgml/: Cargo.toml
crates/dazzle-backend-sgml/src/: lib.rs
crates/dazzle-cli/: Cargo.toml
crates/dazzle-cli/src/: main.rs
crates/dazzle-core/: Cargo.toml  PERFORMANCE_SUMMARY.md  VM_ARCHITECTURE.md
crates/dazzle-core/examples/: arena_vs_gc.rs
crates/dazzle-core/src/: dtd.rs  fot.rs  grove.rs  lib.rs  primitives.rs  scheme.rs  sgml_preprocess.rs
crates/dazzle-core/src/primitives/: character.rs  grove.rs  processing.rs  util.rs
crates/dazzle-core/src/scheme/: arena.rs  arena_primitives.rs  bridge.rs  compiler.rs  environment.rs  evaluator.rs  instruction.rs  integration_tests.rs  mod.rs  parser.rs  primitives.rs  value.rs  vm.rs
crates/dazzle-core/tests/: grove_integration.rs  named_let_test.rs  sgml_output.rs
crates/dazzle-grove-libxml2/: Cargo.toml
crates/dazzle-grove-libxml2/src/: document.rs  lib.rs  node.rs  node_list.rs
crates/dazzle-template/: Cargo.toml
crates/dazzle-template/src/: io.rs  lib.rs  loader.rs  processor.rs
crates/dazzle/src/: args.rs  lib.rs  main.rs
crates/skeme-cli/: Cargo.toml
crates/skeme-cli/src/: args.rs  lib.rs  main.rs
crates/skeme-core/: Cargo.toml
crates/skeme-core/src/: grove.rs  lib.rs  primitives.rs  scheme.rs  types.rs  xml.rs
crates/skeme-core/src/primitives/: grove.rs  processing.rs  types_primitives.rs  util.rs
crates/skeme-template/: Cargo.toml
crates/skeme-template/src/: lib.rs  processor.rs
src/: cli.ts  index.ts
test-fixtures/: basic.scm  complete-test.scm  document.xml  dsssl-modes.scm  dsssl-rules.scm  dsssl-test.scm  helpers.scm  lambda-test.scm  rules-dsl.scm  simple.scm  simple.xml  template.dsl
tests/print-simple/: README.md  dazzle-demo.sh  dazzle-sps-css.sh  demo.fot  demo.xml  simple.xml  sps_css.dsl  sps_css.fot  sps_css.sgml  sps_css.xml  test-demo.sh  test-sps-css.sh
