[package]
name = "dazzle-backend-rtf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RTF backend for Dazzle: Document formatting output engine"

[dependencies]
dazzle-core = { version = "0.4.4", path = "../dazzle-core" }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = "3"
