[package]
name = "dazzle-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core library for Dazzle: Scheme interpreter (ported from OpenJade) + DSSSL primitives + Grove/FOT traits"

[dependencies]
# Garbage collection for Scheme interpreter
gc = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
dazzle-grove-libxml2 = { path = "../dazzle-grove-libxml2" }
