[package]
name = "dazzle-template"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Template engine for Dazzle: template loading, processing control, file I/O"

[dependencies]
# Core Dazzle functionality
dazzle-core = { path = "../dazzle-core" }

# Steel Scheme interpreter
steel-core = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tempfile = "3.14"
