[package]
name = "dazzle"
version = "0.4.5"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Template-driven code generation tool powered by Scheme and XML (DSSSL)"

[[bin]]
name = "dazzle"
path = "src/main.rs"

[dependencies]
# Core Dazzle functionality
dazzle-core = { version = "0.4.5", path = "../dazzle-core" }
dazzle-grove-libxml2 = { version = "0.4.5", path = "../dazzle-grove-libxml2" }
dazzle-backend-sgml = { version = "0.4.5", path = "../dazzle-backend-sgml" }
dazzle-backend-rtf = { version = "0.4.5", path = "../dazzle-backend-rtf" }

# CLI argument parsing
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Garbage collection
gc = { workspace = true }

[dev-dependencies]
# Testing utilities
tempfile = "3.8"
